--- a/src/main/resources/templates/comm/error_404.html
+++ b/src/main/resources/templates/comm/error_404.html
@@ -22,7 +22,7 @@
         <h1>404!</h1>
         <h2>很抱歉，没有找到这个页面！</h2>
         <br>
-        <a class="btn btn-purple waves-effect waves-light" href="/">
+        <a class="btn btn-purple waves-effect waves-light" href="/install/index">
             <i class="fa fa-angle-left"></i> 返回首页
         </a>
     </div>
