--- a/src/main/resources/templates/comm/error_500.html
+++ b/src/main/resources/templates/comm/error_500.html
@@ -24,7 +24,7 @@
         <p>可以尝试向社区发出求助
             <a href="https://github.com/yangxsa/blog/issues" target="_blank">New Issues</a>
         </p>
-        <a class="btn btn-purple waves-effect waves-light" href="/">
+        <a class="btn btn-purple waves-effect waves-light" href="/install/index">
             <i class="fa fa-angle-left"></i> 返回首页
         </a>
     </div>
