--- a/src/main/resources/templates/themes/default/install.html
+++ b/src/main/resources/templates/themes/default/install.html
@@ -44,7 +44,7 @@
         <h1 class="post-title" itemprop="name headline"> 网站基本设置 </h1>
         <div class="post-data">
             <time datetime="2018-04-01T00:33:00+08:00" itemprop="datePublished">
-               欢迎使用SITE BLOG ！
+               欢迎使用ZF BLOG ！
             </time>
         </div>
     </div>
@@ -96,7 +96,7 @@
                     <div class="info-text">
                         <p id="yangxs"></p>
                         <p>Powered by
-                            &copy; 2019 <a href="javascript:void(0);">SITE BLOG</a>
+                            &copy; 2019 <a href="javascript:void(0);">ZF BLOG</a>
                         </p>
                     </div>
                 </div>
