--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -10,7 +10,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Site Blog
+        ZF Blog
         <small>Version 2.0</small>
       </h1>
       <!--<ol class="breadcrumb">-->
