--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Site Blog | Admin</title>
+  <title>ZF Blog | Admin</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="shortcut icon" th:href="@{/themes/img/favicon.png}"/>
@@ -24,7 +24,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="javascript:void(0);"><b>Site</b>Blog</a>
+    <a href="javascript:void(0);"><b>ZF </b> Blog</a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
