--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -51,7 +51,7 @@
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="javascript:void(0);">yangxs</a>
+                    <a href="javascript:void(0);">zhaofu</a>
                 </li>
                 <!-- Messages: style can be found in dropdown.less-->
                 <li>
