--- a/src/main/resources/templates/themes/default/install.html
+++ b/src/main/resources/templates/themes/default/install.html
@@ -94,9 +94,9 @@
                 <div class="meta-copyright-info">
                     <!--<a th:href="${commons.site_url()}" class="info-logo"></a>-->
                     <div class="info-text">
-                        <p id="yangxs"></p>
+                        <p id="zhaofu"></p>
                         <p>Powered by
-                            &copy; 2019 <a href="javascript:void(0);">ZF BLOG</a>
+                            &copy; 2020 <a href="javascript:void(0);">ZF BLOG</a>
                         </p>
                     </div>
                 </div>
