--- a/src/main/resources/templates/comm/error_404.html
+++ b/src/main/resources/templates/comm/error_404.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
-    <title>404（找不到页面）- yangxs</title>
+    <title>404（找不到页面）- zhaofu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <link rel="shortcut icon" th:href="@{/img/favicon.png}"/>
